# jobhound-project

./: .gitignore  DOCUMENTATION.md  README.md  main.py  pyproject.toml
templates/: admin_analytics.html  admin_feedback.html  feedback.html  index.html
